# TerminalVelocity

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  LICENSE  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: highlight_rules.example.yaml  terminalvelocity.example.yaml
src/terminalvelocity/: __init__.py  __main__.py  auth.py  config.py  ingestion.py  models.py  persistence.py  schema.py
src/terminalvelocity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/terminalvelocity/enrichment/: __init__.py  cross_provider.py  schema_mapper.py
src/terminalvelocity/investigation/: __init__.py  export.py  highlight_rules.py  performance.py  pivot.py  replay.py  timeline.py
src/terminalvelocity/observability/: __init__.py  health.py  metrics.py
src/terminalvelocity/providers/: __init__.py  advanced_hunting.py  attack_simulation.py  base.py  defender_cloud_apps.py  defender_xdr.py  entra_id.py  exchange_online.py  identity_protection.py  intune.py  pim.py  registry.py  secure_score.py  service_health.py  sharepoint_onedrive.py  teams.py  unified_audit_log.py
src/terminalvelocity/search/: __init__.py  anomaly.py  correlator.py  engine.py  filters.py  history.py  index.py  parser.py  saved_queries.py
src/terminalvelocity/tui/: __init__.py  app.py  keybindings.py  themes.py
src/terminalvelocity/tui/screens/: __init__.py  anomaly.py  history.py  log_viewer.py  pivot.py  saved_queries.py  tag.py  timeline.py
src/terminalvelocity/tui/widgets/: __init__.py  charts_strip.py  detail_panel.py  event_table.py  provider_panel.py  query_bar.py
tests/: test_config.py  test_ingestion.py
tests/enrichment/: test_cross_provider.py  test_schema_mapper.py
tests/investigation/: test_export.py  test_highlight_rules.py  test_performance.py  test_pivot.py  test_replay.py  test_timeline.py
tests/providers/: conftest.py  test_defender_xdr.py  test_entra_id.py  test_http_adapter.py  test_intune.py  test_new_providers.py  test_phase3_providers.py  test_registry.py  test_registry_enhancements.py  test_unified_audit_log.py
tests/search/: test_correlator.py  test_engine.py  test_engine_enhancements.py  test_filters.py  test_history.py  test_parser.py  test_parser_enhancements.py
tests/tui/: test_smoke.py  test_tui_behavior.py
