[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminalvelocity"
version = "0.1.0"
description = "Terminal log viewer for Microsoft 365"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx==0.28.1",
  "pydantic>=2.11.0",
  "PyYAML==6.0.2",
  "tenacity==9.1.4",
  "textual==8.2.7",
]

[project.scripts]
terminalvelocity = "terminalvelocity.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
