[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminalvelocity"
version = "0.1.0"
description = "Terminal log viewer for Microsoft 365"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["microsoft365", "m365", "security", "logs", "tui", "terminal", "entra", "defender"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
dependencies = [
  "httpx==0.28.1",
  "pydantic>=2.11.0",
  "PyYAML==6.0.2",
  "tenacity==9.1.4",
  "textual==8.2.7",
]

[project.urls]
Homepage = "https://github.com/dannymayer/TerminalVelocity"
Source = "https://github.com/dannymayer/TerminalVelocity"
"Issue Tracker" = "https://github.com/dannymayer/TerminalVelocity/issues"
Changelog = "https://github.com/dannymayer/TerminalVelocity/blob/main/CHANGELOG.md"

[project.scripts]
terminalvelocity = "terminalvelocity.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-cov>=5.0",
  "ruff>=0.9.0",
  "mypy>=1.15",
  "pre-commit>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "RUF"]
ignore = [
  "E501",   # line length — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

[tool.coverage.run]
source = ["terminalvelocity"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
